--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "cors": "^2.8.5",
     "next": "12.0.10",
+    "next-translate": "^1.4.0",
+    "nodemailer": "^6.7.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.33.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
