--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "axios": "^0.27.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "next": "12.0.10",
     "next-translate": "^1.4.0",
     "nodemailer": "^6.7.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.33.0"
+    "react-hook-form": "^7.33.0",
+    "react-toastify": "^9.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
